--- a/src/Index.html
+++ b/src/Index.html
@@ -7,7 +7,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Martel+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
 
 
-    <link rel="stylesheet" href="./src/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
+
     <title>BEM VINDO</title>
 </head>
 <body>
@@ -46,6 +47,6 @@
              
         </div>
     </div>
-    <script src="./src/Script.js" defer></script>
+    <script src="./Script.js" defer></script>
 </body>
 </html>
